--- a/src/views/login.html
+++ b/src/views/login.html
@@ -36,7 +36,7 @@
                     <li><a href="#">Ayuda</a></li>
                 </ul>
                 <ul class="navbar">
-                    <li><a href="/views/registro.html">Crea tu cuenta</a> <i class=" item-listas fa-regular fa-id-card"></i></li>
+                    <li><a href="registro.html">Crea tu cuenta</a> <i class=" item-listas fa-regular fa-id-card"></i></li>
                     <li><a href="#">Ingresa</a> <i class="item-listas fa-solid fa-right-to-bracket"></i></li>
                     <li><a href="#">Mis compras</a> <i class="item-listas fa-solid fa-basket-shopping"></i></li>
                 </ul>
@@ -57,10 +57,10 @@
         </form>
     </main>
     <footer>
-        <ul class="footer-lista-login">
+        <ul class="footer-lista">
             <li>
                 <article>
-                    <i class="fa-solid fa-credit-card"></i>
+                    <i class="i-footer fa-solid fa-credit-card"></i>
                     <h2>Paga con tarjeta o en efectivo</h2>
                     <p class="texto">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                     puntos de pago. ¡Y siempre es seguro!</p>
@@ -68,14 +68,14 @@
             </li>
             <li>
                 <article>
-                    <i class="fa-solid fa-gift"></i>
+                    <i class="i-footer fa-solid fa-gift"></i>
                     <h2>Envio gratis desde $2500</h2>
                     <p class="texto">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
                 </article>
             </li>
             <li>
                 <article>
-                    <i class="fa-solid fa-user-shield"></i>
+                    <i class="i-footer fa-solid fa-user-shield"></i>
                     <h2>Seguridad, de principio a fin</h2>
                     <p class="texto">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.
                     </p>
@@ -83,6 +83,7 @@
             </li>
             
         </ul>
+
         <article>
             <p class="texto">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </article>
