--- a/src/views/home.html
+++ b/src/views/home.html
@@ -36,8 +36,8 @@
                     <li><a href="#">Ayuda</a></li>
                 </ul>
                 <ul class="navbar">
-                    <li><a href="/views/registro.html">Crea tu cuenta</a> <i class=" item-listas fa-regular fa-id-card"></i></li>
-                    <li><a href="/src/views/login.html">Ingresar</a> <i class="item-listas fa-solid fa-right-to-bracket"></i></li>
+                    <li><a href="./registro.html">Crea tu cuenta</a> <i class=" item-listas fa-regular fa-id-card"></i></li>
+                    <li><a href="login.html">Ingresar</a> <i class="item-listas fa-solid fa-right-to-bracket"></i></li>
                     <li><a href="#">Mis compras</a> <i class="item-listas fa-solid fa-basket-shopping"></i></li>
                 </ul>
             </div>
@@ -81,7 +81,7 @@
                     <p class="precios">$70500</p>
                     <p class="descuentos">10% off</p>
                 </div>
-                <p class="descripcion">Samsung Samsung Galaxy S10</p>
+                    <p class="descripcion">Samsung Galaxy S10</p>
             </article>
             <article class="articulos">
                 <img src="/img/img-tv-samsung-smart.jpg" alt="" class="articulos-img">
@@ -147,7 +147,7 @@
         <ul class="footer-lista">
             <li>
                 <article>
-                    <i class="fa-solid fa-credit-card"></i>
+                    <i class="i-footer fa-solid fa-credit-card"></i>
                     <h2>Paga con tarjeta o en efectivo</h2>
                     <p class="texto">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                     puntos de pago. ¡Y siempre es seguro!</p>
@@ -155,14 +155,14 @@
             </li>
             <li>
                 <article>
-                    <i class="fa-solid fa-gift"></i>
+                    <i class="i-footer fa-solid fa-gift"></i>
                     <h2>Envio gratis desde $2500</h2>
                     <p class="texto">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
                 </article>
             </li>
             <li>
                 <article>
-                    <i class="fa-solid fa-user-shield"></i>
+                    <i class="i-footer fa-solid fa-user-shield"></i>
                     <h2>Seguridad, de principio a fin</h2>
                     <p class="texto">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.
                     </p>
