--- a/src/views/registro.html
+++ b/src/views/registro.html
@@ -36,8 +36,8 @@
                     <li><a href="#">Ayuda</a></li>
                 </ul>
                 <ul class="navbar">
-                    <li><a href="/views/registro.html">Crea tu cuenta</a> <i class=" item-listas fa-regular fa-id-card"></i></li>
-                    <li><a href="/src/views/login.html">Ingresar</a> <i class="item-listas fa-solid fa-right-to-bracket"></i></li>
+                    <li><a href="registro.html">Crea tu cuenta</a> <i class=" item-listas fa-regular fa-id-card"></i></li>
+                    <li><a href="login.html">Ingresar</a> <i class="item-listas fa-solid fa-right-to-bracket"></i></li>
                     <li><a href="#">Mis compras</a> <i class="item-listas fa-solid fa-basket-shopping"></i></li>
                 </ul>
             </div>
@@ -47,107 +47,70 @@
         </nav>
         <div class="banner"></div>
     </header>
-    <main class="main">
-        <h2 class="subtitulos">Basado en tu ultima visita</h2>
-        <section class="seccion1">
-            <article class="articulos">
-                <img src="/img/img-cafetera-moulinex.jpg" alt="" class="articulos-img">
-                <div class="camion-envio">
-                    <i class="fa-solid fa-truck"></i>
-                </div>
-                <div class="articulo-contenido">
-                    <p class="precios">$6770</p>
-                    <p class="descuentos">40% off</p>
-                </div>
-                <p class="descripcion">Cafetera Moulinex</p>
-            </article>
-            <article class="articulos">
-                <img src="/img/img-macbook-pro-2019.jpg" alt="" class="articulos-img">
-                <div class="camion-envio">
-                    <i class="fa-solid fa-truck"></i>
-                </div>
-                <div class="articulo-contenido">
-                    <p class="precios">$23000</p>
-                    <p class="descuentos">20% off</p>
-                </div>
-                <p class="descripcion">MacBook Pro 2019</p>
-            </article>
-            <article class="articulos">
-                <img src="/img/img-samsung-galaxy-s10.jpg" alt="" class="articulos-img">
-                <div class="camion-envio">
-                    <i class="fa-solid fa-truck"></i>
-                </div>
-                <div class="articulo-contenido">
-                    <p class="precios">$70500</p>
-                    <p class="descuentos">10% off</p>
-                </div>
-                <p class="descripcion">Samsung Samsung Galaxy S10</p>
-            </article>
-            <article class="articulos">
-                <img src="/img/img-tv-samsung-smart.jpg" alt="" class="articulos-img">
-                <div class="camion-envio">
-                    <i class="fa-solid fa-truck"></i>
-                </div>
-                <div class="articulo-contenido">
-                    <p class="precios">$23200</p>
-                    <p class="descuentos">5% off</p>
-                </div>
-                <p class="descripcion">SmartTv Samsung 43"</p>
-            </article>
-        </section>
-        <h2 class="subtitulos">Seccion de Ofertas</h2>
-        <section class="seccion2">
-            <article class="articulos">
-                <img src="/img/img-cafetera-moulinex.jpg" alt="" class="articulos-img">
-                <div class="camion-envio">
-                    <i class="fa-solid fa-truck"></i>
-                </div>
-                <div class="articulo-contenido">
-                    <p class="precios">$6770</p>
-                    <p class="descuentos">40% off</p>
-                </div>
-                <p class="descripcion">Cafetera Moulinex</p>
-            </article>
-            <article class="articulos">
-                <img src="/img/img-macbook-pro-2019.jpg" alt="" class="articulos-img">
-                <div class="camion-envio">
-                    <i class="fa-solid fa-truck"></i>
-                </div>
-                <div class="articulo-contenido">
-                    <p class="precios">$230000</p>
-                    <p class="descuentos">20% off</p>
-                </div>
-                <p class="descripcion">MacBook Pro 2019</p>
-            </article>
-            <article class="articulos">
-                <img src="/img/img-samsung-galaxy-s10.jpg" alt="" class="articulos-img">
-                <div class="camion-envio">
-                    <i class="fa-solid fa-truck"></i>
-                </div>
-                <div class="articulo-contenido">
-                    <p class="precios">$70500</p>
-                    <p class="descuentos">10% off</p>
-                </div>
-                <p class="descripcion">Samsung Galaxy S10</p>
-            </article>
-            <article class="articulos">
-                <img src="/img/img-tv-samsung-smart.jpg" alt="" class="articulos-img">
-                <div class="camion-envio">
-                    <i class="fa-solid fa-truck"></i>
-                </div>
-                <div class="articulo-contenido">
-                    <p class="precios">$23200</p>
-                    <p class="descuentos">5% off</p>
-                </div>
-                <p class="descripcion">SmartTv Samsung 43"</p>
-            </article>
-        </section>
+    <main class="main-registro">
+        <form class="formulario" action="" method="POST">
+            <label for="nombreApellido">Nombre y Apellido:</label>
+            <input type="text" id="nombreApellido"
+            placeholder="Juan Ramiro Perez">
+
+            <label for="usuario">Nombre de usuario:</label>
+            <input type="text" id="usuario" placeholder="@usuario_25">
+
+            <label for="fecha-nac">Fecha de nacimento:</label>
+            <input type="date">
+
+            <label for="domicilio">Domicilio:</label>
+            <input type="text" id="domicilio">
+
+            <label for="">Tipo de usuario:</label>
+            <div class="radio">
+            <label for="venta">Vendedor</label>
+            <input type="radio" id="venta" name="radio">
+            <label for="compra">Comprador</label>
+            <input type="radio" id="compra" name="radio">
+            </div>
+
+            
+            <label for="interes">Categoria de interes:</label>
+
+            <div class="intereses">
+            <input name="intereses" type="checkbox" id="electro">
+            <label for="electro">Electro</label>
+            </div>
+            <div class="intereses">
+            <input name="intereses" type="checkbox">
+            <label for="moda">Moda</label>
+            </div>
+            <div class="intereses">
+            <input name="intereses" type="checkbox">
+            <label for="hogar">Hogar</label>
+            </div>
+            <div class="intereses">
+            <input name="intereses" type="checkbox">
+            <label for="jugueteria">Jugueteria</label>
+            </div>
+            <div class="intereses">
+            <input name="intereses" type="checkbox">
+            <label for="fitness">Fitness</label>
+            </div>
+
+            <label for="foto-usuario">Foto de usuario:</label><input type="file" name="" id="foto-usuario">
+
+            <label for="contrasenia">Contrasenia:</label>
+            <input type="password" name="" id="contrasenia">
+            
+            <label for="confirmar-contrasenia">Confirmar contrasenia:</label>
+            <input type="password" name="" id="confirmar-contrasenia">
+
+            <button class="boton-login" type="button"><a href="/src/views/home.html">Enviar</a></button>
+            <button class="boton-login" type="reset">Volver a empezar</button>
+        </form>
     </main>
     <footer>
         <ul class="footer-lista">
             <li>
                 <article>
-                    <i class="fa-solid fa-credit-card"></i>
+                    <i class="i-footer fa-solid fa-credit-card"></i>
                     <h2>Paga con tarjeta o en efectivo</h2>
                     <p class="texto">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                     puntos de pago. ¡Y siempre es seguro!</p>
@@ -155,14 +118,14 @@
             </li>
             <li>
                 <article>
-                    <i class="fa-solid fa-gift"></i>
+                    <i class="i-footer fa-solid fa-gift"></i>
                     <h2>Envio gratis desde $2500</h2>
                     <p class="texto">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
                 </article>
             </li>
             <li>
                 <article>
-                    <i class="fa-solid fa-user-shield"></i>
+                    <i class="i-footer fa-solid fa-user-shield"></i>
                     <h2>Seguridad, de principio a fin</h2>
                     <p class="texto">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.
                     </p>
